--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "connectDB": "node utils/connectDb.mjs"
   },
   "dependencies": {
     "expo": "~51.0.28",
+    "expo-crypto": "~13.0.2",
+    "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "nativewind": "2",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-bouncy-checkbox": "^4.1.2",
+    "react-native-modalbox": "^2.0.2",
+    "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.10.5",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "15.2.0",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
